@@ -24,6 +24,7 @@
  */
 package co.elastic.apm.agent.servlet;
 
+import co.elastic.apm.agent.configuration.CoreConfiguration;
 import co.elastic.apm.agent.impl.TracerInternalApiUtils;
 import co.elastic.apm.agent.impl.transaction.Span;
 import okhttp3.Response;
@@ -46,6 +47,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.util.Collections;
 import java.util.EnumSet;
 
 import static co.elastic.apm.agent.servlet.RequestDispatcherSpanType.ERROR;
@@ -54,6 +56,7 @@ import static co.elastic.apm.agent.servlet.RequestDispatcherSpanType.INCLUDE;
 import static co.elastic.apm.agent.servlet.ServletApiAdvice.SPAN_SUBTYPE;
 import static co.elastic.apm.agent.servlet.ServletApiAdvice.SPAN_TYPE;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.when;
 
 class ServletInstrumentationTest extends AbstractServletTest {
 
@@ -122,6 +125,32 @@ class ServletInstrumentationTest extends AbstractServletTest {
         assertThat(span.getSubtype()).isEqualTo(SPAN_SUBTYPE);
         assertThat(span.getAction()).isEqualTo(ERROR.getAction());
         assertThat(span.getNameAsString()).isEqualTo("ERROR /error");
+        assertThat(reporter.getErrors().size()).isEqualTo(1);
+        assertThat(reporter.getFirstError().getException()).isInstanceOf(ErrorServlet.HelloException.class);
+    }
+
+    @Test
+    void testForward_DispatchSpansDisabled() throws Exception {
+        when(getConfig().getConfig(CoreConfiguration.class).getDisabledInstrumentations())
+            .thenReturn(Collections.singletonList(ServletInstrumentation.SERVLET_API_DISPATCH));
+        callServlet(1, "/forward");
+        assertThat(reporter.getSpans()).isEmpty();
+    }
+
+    @Test
+    void testInclude_DispatchSpansDisabled() throws Exception {
+        when(getConfig().getConfig(CoreConfiguration.class).getDisabledInstrumentations())
+            .thenReturn(Collections.singletonList(ServletInstrumentation.SERVLET_API_DISPATCH));
+        callServlet(1, "/include");
+        assertThat(reporter.getSpans()).isEmpty();
+    }
+
+    @Test
+    void testClientError_DispatchSpansDisabled() throws Exception {
+        when(getConfig().getConfig(CoreConfiguration.class).getDisabledInstrumentations())
+            .thenReturn(Collections.singletonList(ServletInstrumentation.SERVLET_API_DISPATCH));
+        callServlet(1, "/unknown", "Hello Error!", 404);
+        assertThat(reporter.getSpans()).isEmpty();
         assertThat(reporter.getErrors().size()).isEqualTo(1);
         assertThat(reporter.getFirstError().getException()).isInstanceOf(ErrorServlet.HelloException.class);
     }
